--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Contacto</title>
-</head>
-<body>
-    <h2>Contáctanos</h2>
-    <form id="contact-form">
-        <label for="name">Nombre:</label>
-        <input type="text" id="name" name="name" required>
-        <br>
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" required>
-        <br>
-        <label for="message">Mensaje:</label>
-        <textarea id="message" name="message" required></textarea>
-        <br>
-        <button type="submit">Enviar</button>
-    </form>
+<form id="form">
+  <div class="field">
+    <label for="from_name">from_name</label>
+    <input type="text" name="from_name" id="from_name" />
+  </div>
+  <div class="field">
+    <label for="to_name">to_name</label>
+    <input type="text" name="to_name" id="to_name" />
+  </div>
+  <div class="field">
+    <label for="message">message</label>
+    <input type="text" name="message" id="message" />
+  </div>
+  <div class="field">
+    <label for="reply_to">reply_to</label>
+    <input type="text" name="reply_to" id="reply_to" />
+  </div>
 
-    <script src="contact.js"></script>
-</body>
-</html>
+  <input type="submit" id="button" value="Send Email" />
+</form>
+
+<script
+  type="text/javascript"
+  src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+></script>
+<script src="/contact.js"></script>
+
+<script type="text/javascript">
+  emailjs.init("R5t_kEJnz9W_cdIUe");
+</script>
