--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formulario de Contacto</title>
-</head>
-<body>
+  </head>
+  <body>
     <h2>Contáctanos</h2>
     <form id="contact-form">
-        <label for="name">Nombre:</label>
-        <input type="text" id="name" name="name" required>
-        <br>
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" required>
-        <br>
-        <label for="message">Mensaje:</label>
-        <textarea id="message" name="message" required></textarea>
-        <br>
-        <button type="submit">Enviar</button>
+      <label for="name">Nombre:</label>
+      <input type="text" id="name" name="name" required />
+      <br />
+      <label for="email">Correo Electrónico:</label>
+      <input type="email" id="email" name="email" required />
+      <br />
+      <label for="message">Mensaje:</label>
+      <textarea id="message" name="message" required></textarea>
+      <br />
+      <button type="submit">Enviar</button>
     </form>
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.5.0/dist/email.min.js"></script>
 
     <script src="./contact.js"></script>
-</body>
+  </body>
 </html>
